# rich-consoleimager

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
rich_consoleimager/: __init__.py  console.py  table.py
